@@ -21,42 +21,57 @@ package argonms.game.field.movement;
 
 import argonms.common.util.output.LittleEndianWriter;
 import java.awt.Point;
+import java.util.EnumSet;
+import java.util.Set;
 
 /**
  *
  * @author GoldenKevin
  */
-public class AbsoluteLifeMovement extends AbstractLifeMovement {
-	private Point pixelsPerSecond;
-	private short unk;
+public class AbsoluteLifeMovement implements PositionChangedMovementFragment, FootholdChangedMovementFragment, StanceChangedMovementFragment {
+	private final byte type;
+	private final Point position;
+	private final Point pixelsPerSecond;
+	private final short foothold;
+	private final byte stance;
+	private final short duration;
 
-	public AbsoluteLifeMovement(byte type, Point position, short duration, byte newstate) {
-		super(type, position, duration, newstate);
-	}
-
-	public Point getPixelsPerSecond() {
-		return pixelsPerSecond;
-	}
-
-	public void setPixelsPerSecond(Point wobble) {
+	public AbsoluteLifeMovement(byte type, Point position, Point wobble, short foothold, byte stance, short duration) {
+		this.type = type;
+		this.position = position;
 		this.pixelsPerSecond = wobble;
-	}
-
-	public short getUnk() {
-		return unk;
-	}
-
-	public void setUnk(short unk) {
-		this.unk = unk;
+		this.foothold = foothold;
+		this.stance = stance;
+		this.duration = duration;
 	}
 
 	@Override
 	public void serialize(LittleEndianWriter lew) {
-		lew.writeByte(getType());
-		lew.writePos(getPosition());
+		lew.writeByte(type);
+		lew.writePos(position);
 		lew.writePos(pixelsPerSecond);
-		lew.writeShort(unk);
-		lew.writeByte(getNewstate());
-		lew.writeShort(getDuration());
+		lew.writeShort(foothold);
+		lew.writeByte(stance);
+		lew.writeShort(duration);
+	}
+
+	@Override
+	public Set<UpdatedEntityInfo> updatedStats() {
+		return EnumSet.of(UpdatedEntityInfo.POSITION, UpdatedEntityInfo.FOOTHOLD, UpdatedEntityInfo.STANCE);
+	}
+
+	@Override
+	public Point getPosition() {
+		return position;
+	}
+
+	@Override
+	public short getFoothold() {
+		return foothold;
+	}
+
+	@Override
+	public byte getStance() {
+		return stance;
 	}
 }
